--- a/html2.html
+++ b/html2.html
@@ -127,7 +127,7 @@
     <h2>Explore Nossas Linhas Naturais</h2>
 
     <div class="colecao">
-      <img src="https://via.placeholder.com/300x300/fde4cc/000000?text=Pele+do+Verão" alt="Coleção Pele do Verão">
+      <img src="img/pele.jpg" alt="Coleção Pele do Verão">
       <div class="colecao-texto">
         <h3>Coleção Pele do Verão</h3>
         <p>Com tons quentes e textura leve, essa linha é perfeita para realçar a beleza do verão o ano todo. Formulada com óleos naturais e pigmentos minerais.</p>
@@ -135,7 +135,7 @@
     </div>
 
     <div class="colecao">
-      <img src="https://via.placeholder.com/300x300/f0dcc0/000000?text=Areia+e+Luz" alt="Coleção Areia e Luz">
+      <img src="img/luz.jpg" alt="Coleção Areia e Luz">
       <div class="colecao-texto">
         <h3>Coleção Areia & Luz</h3>
         <p>Inspirada nas cores suaves da praia ao entardecer. Sombras cintilantes, iluminadores dourados e blushes pêssego para um glow natural e sofisticado.</p>
@@ -143,7 +143,7 @@
     </div>
 
     <div class="colecao">
-      <img src="https://via.placeholder.com/300x300/f7e9d1/000000?text=Rituais+da+Terra" alt="Coleção Rituais da Terra">
+      <img src="img/oi.jpg" alt="Coleção Rituais da Terra">
       <div class="colecao-texto">
         <h3>Coleção Rituais da Terra</h3>
         <p>Feita com ingredientes botânicos, essa coleção une maquiagem e autocuidado. Perfeita para quem busca uma beleza consciente e conectada com a natureza.</p>
