--- a/html3.html
+++ b/html3.html
@@ -154,7 +154,7 @@
   </nav>
   
   <section class="intro">
-    <img src="https://via.placeholder.com/400x400/f2e1d5/000000?text=Rituais+Naturais" alt="Autocuidado natural">
+    <img src="img/verao.jpg" alt="Autocuidado natural">
     <div class="intro-texto">
       <h2>Seu ritual começa aqui</h2>
       <p>Sabemos que uma maquiagem incrível começa com uma pele bem cuidada. Nossa linha de skincare foi pensada para acompanhar seu ritmo, com fórmulas naturais, texturas leves e resultados reais.</p>
@@ -165,22 +165,22 @@
     <h2>Nossos Essenciais de Skincare</h2>
     <div class="grid-cuidados">
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/4221/4221874.png" alt="Limpeza">
+        <img src="img/limpeza.jpg"Limpeza>
         <h3>Limpeza Botânica</h3>
         <p>Remove impurezas com suavidade usando ativos de chá verde, pepino e lavanda.</p>
       </div>
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" alt="Hidratação">
+        <img src="img/hidra.jpg" alt="Hidratação">
         <h3>Hidratação Leve</h3>
         <p>Textura gel-creme, ideal para climas quentes. Fórmula com camomila e ácido hialurônico vegetal.</p>
       </div>
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/2903/2903843.png" alt="Óleo nutritivo">
+        <img src="img/oelo.jpg" alt="Óleo nutritivo">
         <h3>Óleo Iluminador</h3>
         <p>Glow natural com blend de óleos prensados a frio. Use como primer ou finalizador.</p>
       </div>
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/3643/3643183.png" alt="Proteção solar">
+        <img src="img/protetor.jpg" alt="Proteção solar">
         <h3>Proteção Solar Natural</h3>
         <p>FPS 30 com filtro mineral, sem resíduos brancos e ideal para peles sensíveis.</p>
       </div>
