--- a/html4.html
+++ b/html4.html
@@ -154,7 +154,7 @@
   </nav>
 
   <section class="intro">
-    <img src="https://via.placeholder.com/400x400/ffe8d3/000000?text=Glow+Natural" alt="Glow Natural">
+    <img src="img/sol.jpg" alt="Glow Natural">
     <div class="intro-texto">
       <h2>Sol, cor e brilho natural</h2>
       <p>Com texturas suaves e tons quentes, nossos produtos são pensados para manter sua pele iluminada e radiante — mesmo fora da estação. Sinta o verão em cada detalhe.</p>
@@ -165,22 +165,22 @@
     <h2>Essenciais para o Look Solar</h2>
     <div class="grid-cuidados">
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/3259/3259783.png" alt="Bronzer">
+        <img src="img/brozer.jpg" alt="Bronzer">
         <h3>Bronzer Areia Dourada</h3>
         <p>Com pigmentos minerais e efeito aveludado, realça o contorno natural do rosto com um toque de sol.</p>
       </div>
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/3633/3633365.png" alt="Iluminador">
+        <img src="img/ilumi.jpg" alt="Iluminador">
         <h3>Iluminador Luz Tropical</h3>
         <p>Textura cremosa com brilho suave para destacar pontos estratégicos do rosto com naturalidade.</p>
       </div>
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/4206/4206326.png" alt="Balm">
+        <img src="img/balm.jpg" alt="Balm">
         <h3>Balm Solar com Cor</h3>
         <p>Combina hidratação e cor suave nos lábios e bochechas. Perfeito para um visual fresh e prático.</p>
       </div>
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/4577/4577237.png" alt="Fixador">
+        <img src="img/fix.jpg" alt="Fixador">
         <h3>Bruma Refrescante</h3>
         <p>Fixador leve com toque refrescante de água de coco e aloe vera. Ideal para peles expostas ao sol.</p>
       </div>
