--- a/html5.html
+++ b/html5.html
@@ -159,17 +159,16 @@
 
     <div class="valores">
       <div class="valor">
-        <img src="https://cdn-icons-png.flaticon.com/512/4241/4241664.png" alt="Natural">
+       
         <h3>Naturalidade</h3>
         <p>Ingredientes orgânicos, texturas leves e formulações limpas para valorizar sua pele real.</p>
       </div>
       <div class="valor">
-        <img src="https://cdn-icons-png.flaticon.com/512/2913/2913465.png" alt="Sustentável">
+       
         <h3>Sustentabilidade</h3>
         <p>Embalagens recicláveis, produção ética e processos conscientes em cada detalhe.</p>
       </div>
       <div class="valor">
-        <img src="https://cdn-icons-png.flaticon.com/512/1647/1647583.png" alt="Autenticidade">
         <h3>Autenticidade</h3>
         <p>Celebramos a diversidade de tons, traços e histórias — porque beleza é expressão.</p>
       </div>
@@ -186,4 +185,9 @@
   </footer>
 
 </body>
-</html>
+</html<a href="https://wa.me/5521992796906" target="_blank" style="text-decoration: none;">
+  <img src="https://img.icons8.com/color/48/000000/whatsapp.png" alt="WhatsApp" />
+  Fale conosco no WhatsApp
+</a>
+
+
